@@ -2180,6 +2180,7 @@ Waba <waba-ace at waba dot be>
 Scott Mark <sjm at pobox dot com>
 Bjoern Rasmussen <bjoern.d.rasmussen at gmail dot com>
 Ian C White <Ian_C_White at raytheond dot com>
+Dennis Chernoivanov <cdi at tbricks dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
