@@ -34,7 +34,8 @@ single_cpu_increment (volatile long *value)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "xadd %0, (%1)" : "+r"(tmp) : "r"(addr) );
   return tmp + 1;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_add_long (
            reinterpret_cast<volatile unsigned long*> (value), 1);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -51,7 +52,8 @@ single_cpu_decrement (volatile long *value)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "xadd %0, (%1)" : "+r"(tmp) : "r"(addr) );
   return tmp - 1;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_add_long (
             reinterpret_cast<volatile unsigned long*> (value), -1);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -67,7 +69,8 @@ single_cpu_exchange (volatile long *value, long rhs)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "xchg %0, (%1)" : "+r"(rhs) : "r"(addr) );
   return rhs;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_swap_long (
            reinterpret_cast<volatile unsigned long*> (value), rhs);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -84,7 +87,8 @@ single_cpu_exchange_add (volatile long *value, long rhs)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "xadd %0, (%1)" : "+r"(rhs) : "r"(addr) );
   return rhs;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_swap_add_long (
            reinterpret_cast<volatile unsigned long*> (value), rhs);
 #elif defined (WIN32) && !defined (ACE_HAS_INTERLOCKED_EXCHANGEADD)
@@ -121,7 +125,8 @@ multi_cpu_increment (volatile long *value)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "lock ; xadd %0, (%1)" : "+r"(tmp) : "r"(addr) );
   return tmp + 1;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_add_long (
            reinterpret_cast<volatile unsigned long*> (value), 1);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -138,7 +143,8 @@ multi_cpu_decrement (volatile long *value)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "lock ; xadd %0, (%1)" : "+r"(tmp) : "r"(addr) );
   return tmp - 1;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_add_long (
            reinterpret_cast<volatile unsigned long*> (value), -1);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -155,7 +161,8 @@ multi_cpu_exchange (volatile long *value, long rhs)
   // The XCHG instruction automatically follows LOCK semantics
   asm( "xchg %0, (%1)" : "+r"(rhs) : "r"(addr) );
   return rhs;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_swap_long (
            reinterpret_cast<volatile unsigned long*> (value), rhs);
 #else /* __GNUC__ && ACE_HAS_PENTIUM */
@@ -172,7 +179,8 @@ multi_cpu_exchange_add (volatile long *value, long rhs)
   unsigned long addr = reinterpret_cast<unsigned long> (value);
   asm( "lock ; xadd %0, (%1)" : "+r"(rhs) : "r"(addr) );
   return rhs;
-#elif defined (sun)
+#elif defined (sun) || \
+      (defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64)))
   return ace_atomic_swap_add_long (
            reinterpret_cast<volatile unsigned long*> (value), rhs);
 #elif defined (WIN32) && !defined (ACE_HAS_INTERLOCKED_EXCHANGEADD)
