@@ -40,6 +40,8 @@
 #  endif /* ACE_HAS_INTERLOCKED_EXCHANGEADD */
 # elif defined (__GNUC__) && (defined (ACE_HAS_PENTIUM) || defined (__amd64__))
 #  define ACE_HAS_BUILTIN_ATOMIC_OP
+# elif defined (__SUNPRO_CC) && (defined (__i386) || defined (__x86_64))
+#  define ACE_HAS_BUILTIN_ATOMIC_OP
 # endif /* WIN32 */
 #endif /* ACE_HAS_THREADS */
 
