@@ -9,7 +9,81 @@
 
 #if defined (ACE_INCLUDE_ATOMIC_OP_SPARC)
 
-# if defined (__sparcv9)
+#if defined(__i386) && defined(__SUNPRO_C)
+static void
+__sunpro_asm_code() {
+  __asm("\n\
+      .globl  ace_atomic_add_long     \n\
+      .type   ace_atomic_add_long,@function   \n\
+      .align  4         \n\
+ace_atomic_add_long:              \n\
+      movl    0x00000004(%esp), %edx    \n\
+      movl    0x00000008(%esp), %eax    \n\
+      lock; xadd  %eax, (%edx)      \n\
+      addl    %eax, 0x00000008(%esp)    \n\
+      ret           \n\
+      ");
+
+  __asm("\n\
+      .globl  ace_atomic_swap_long      \n\
+      .type   ace_atomic_swap_long,@function    \n\
+      .align  4         \n\
+ace_atomic_swap_long:             \n\
+      movl    0x00000004(%esp), %edx    \n\
+      movl    0x00000008(%esp), %eax    \n\
+      xchg    %eax, (%edx)      \n\
+      ret           \n\
+      ");
+
+  __asm("\n\
+      .globl  ace_atomic_swap_long      \n\
+      .type   ace_atomic_swap_long,@function    \n\
+      .align  4         \n\
+ace_atomic_swap_add_long:           \n\
+      movl    0x00000004(%esp), %edx    \n\
+      movl    0x00000008(%esp), %eax    \n\
+      lock; xadd  %eax, (%edx)      \n\
+      ret           \n\
+      ");
+}
+
+#elif defined(__x86_64) && defined(__SUNPRO_C)
+
+static void
+__sunpro_asm_code() {
+  __asm("\n\
+      .globl  ace_atomic_add_long     \n\
+      .type   ace_atomic_add_long,@function   \n\
+      .align  16          \n\
+ace_atomic_add_long:              \n\
+      movq    %rsi, %rax      \n\
+      lock; xaddq %rax, (%rdi)      \n\
+      addq    %rsi, %rax      \n\
+      ret           \n\
+      ");
+
+  __asm("\n\
+      .globl  ace_atomic_swap_long      \n\
+      .type   ace_atomic_swap_long,@function    \n\
+      .align  16          \n\
+ace_atomic_swap_long:             \n\
+      xchgq %rsi, (%rdi)        \n\
+      movq  %rsi, %rax        \n\
+      ret           \n\
+      ");
+
+  __asm("\n\
+      .globl  ace_atomic_swap_add_long    \n\
+      .type   ace_atomic_swap_add_long,@function  \n\
+      .align  16          \n\
+ace_atomic_swap_add_long:           \n\
+      lock; xaddq %rsi, (%rdi)      \n\
+      movq    %rsi, %rax      \n\
+      ret           \n\
+      ");
+}
+
+# elif defined (__sparcv9)
 
 unsigned long
 ace_atomic_add_long (volatile unsigned long *dest, long rhs)
